<resources>
    <string name="app_name">BloodFOR</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="loginfb">Login with Facebook</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="point">0</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="bloodType">Blood Type</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="ab">AB</string>
    <string name="o">O</string>
    <string name="or">OR</string>
    <string name="acc">Have an account ?</string>
    <string name="accn">Don\'t have an account ?</string>
    <string name="eventName">Event Name</string>
    <string name="eventDesc">Event Description</string>
    <string name="eventPic">Event Picture</string>
    <string name="eventDate">Event Date</string>
    <string name="eventLoc">Event Location</string>
    <string name="date">Date     : </string>
    <string name="loc">Location : </string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="statistic">Statistic</string>
    <string name="login_google">Login with google</string>
    <string name="login_facebook">Login with facebook</string>
    <string name="search">Search</string>
    <string name="participate">Participate</string>
    <string name="facebook_app_id">2418158981635066</string>
    <string name="geolocation">Geolocation</string>
    <string name="remember_me">Remember Me</string>
    <string name="change_profile_pic">Change Profile Picture</string>
    <string name="change_password">Change Password</string>
    <string name="insert_event">Add New Event</string>
    <string name="save">Save</string>
    <string name="upload_pic">Upload Picture</string>
    <string name="show_map">Show Map</string>
    <string name="event">Event</string>
    <string name="points">Points</string>
    <string name="ok">OK</string>
    <string name="choose_img">Choose Image</string>
    <string name="event_pic">Event Picture</string>
    <string name="goto_maps">Goto Maps</string>
    <string name="event_lat">Event Latitude</string>
    <string name="event_long">Event Longtitude</string>
    <string name="event_date">Event Date</string>
    <string name="change_pass">Change Password</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="update_event">Update Event</string>
    <string name="delete_event">Delete Event</string>
    <string name="logout">Logout</string>
    <string name="insert_review">Insert Review</string>
    <string name="review">Review</string>
    <string name="redeem">Redeem Point</string>
    <string name="point_">Point : </string>
    <string name="about_event">About this event</string>
    <!-- TODO: Remove or >change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
