<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.bluejack19_1.BloodFOR.MainActivity"
    >

    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home" />
    <item
        android:id="@+id/nav_history"
        android:title="@string/history"
        android:icon="@drawable/ic_history"/>
    <item
        android:id="@+id/nav_statistic"
        android:title="@string/statistic"
        android:icon="@drawable/ic_chart"/>
    <item
        android:id="@+id/nav_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_acc"/>

</menu>