<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.bluejack19_1.BloodFOR.Fragment.ParticipateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bloodType"
            android:textColor="@color/redBlood"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            >
            <RadioButton
                android:id="@+id/type_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a"
                />
            <RadioButton
                android:id="@+id/type_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b"
                />
            <RadioButton
                android:id="@+id/type_ab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ab"
                />
            <RadioButton
                android:id="@+id/type_o"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/o"
                />
        </RadioGroup>

        <Button
            android:id="@+id/participate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/participate"
            android:layout_gravity="right"
            android:background="@color/redBlood"
            android:textColor="@color/white"
            android:layout_marginEnd="20dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"/>
    </LinearLayout>

</FrameLayout>
