<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:layout_marginTop="30dp"
    tools:context="edu.bluejack19_1.BloodFOR.PasswordActivity">

    <EditText
        android:id="@+id/oldPassTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/old_pass"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/newpassTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/new_pass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/changePassBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_pass"
        android:layout_marginTop="30dp"
        android:background="@drawable/button2"/>
</LinearLayout>
