<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.bluejack19_1.BloodFOR.Fragment.DetailFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/event_photo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/eventName"
                tools:src="@android:color/darker_gray" />
            <TextView
                android:id="@+id/event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/eventName"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="30sp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/place_item_loc"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/loc"
                    android:textSize="17sp" />
                <TextView
                    android:id="@+id/event_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textSize="17sp"
                    tools:text="@string/eventLoc" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                >

                <TextView
                    android:id="@+id/event_dates"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/date"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/event_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textSize="17sp"
                    tools:text="@string/eventDate" />

            </LinearLayout>
            <TextView
                android:id="@+id/event_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/eventDesc"
                android:textSize="22sp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginTop="20dp"
                android:textAlignment="gravity"
                android:layout_marginBottom="20dp"
                />
            <Button
                android:id="@+id/show_map_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_map"
                android:layout_gravity="right"
                android:background="@color/green"
                android:textColor="@color/white"
                android:layout_marginEnd="20dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                />
        </LinearLayout>
    </FrameLayout>
</ScrollView>
